here update franchise profile bug is resolved